--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,4 @@
+Header Set Access-Control-Allow-Origin "*"
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
